--- a/Job Application/style.css
+++ b/Job Application/style.css
@@ -2,20 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 body {
-  background-color: chartreuse;
+  background-color: #ffff66;
 }
 .container {
-  min-width: 900px;
+  width: 100%;
+  max-width: 900px;
   margin: 0 auto;
 }
 .apply_box {
+  width: 100%;
   max-width: 600px;
-  padding: 20px;
+  padding: 24px;
   background-color: white;
-  margin: 0 auto;
-  margin-top: 50px;
+  margin: 50px auto;
   box-shadow: 4px 3px 5px rgba(1, 1, 1, 0.1);
   border-radius: 10px;
 }
@@ -31,16 +33,19 @@ body {
 .control {
   display: flex;
   flex-direction: column;
+  margin: 16px 0;
 }
 label {
-  font-size: 15px;
+  font-size: 16px;
   margin-bottom: 5px;
 }
-input {
-  padding: 6px 10px;
+input,
+textarea {
+  padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 15px;
+  font-family: sans-serif;
 }
 
 .button_container {
@@ -51,11 +56,16 @@ input {
 button {
   background-color: red;
   border: transparent solid 2px;
-  padding: 5px 10px;
+  padding: 8px 16px;
   color: white;
   border-radius: 8px;
   transition: 0.3s ease-out;
   cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+button:hover {
+  transform: scale(1.1);
 }
 .textarea_control {
   grid-column: 1 / span 2;
@@ -64,6 +74,11 @@ button {
   width: 100%;
 }
 @media (max-width: 460px) {
+  .apply_box {
+    margin: 0 auto;
+    padding: 16px;
+    border-radius: 0;
+  }
   .textarea_control {
     grid-column: 1 / span 1;
   }
